--- a/index.html
+++ b/index.html
@@ -6,67 +6,71 @@
     <title>Mangata and Gallo</title>
     <meta name="description" content="Luxury Jewlery" />
     <meta name="author" content="Mangata and Gallo" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
-    <header>
-      <img src="/assets/Asset 1@3x.png" alt="Company logo" />
-    </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
+
+    <div class="wrapper">
+      <header>
+        <img src="/assets/Asset 1@3x.png" alt="Company logo" />
+
+        <nav class="primary-navigation" aria-label="Primary Navigation">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about.html">About</a></li>
+          </ul>
+        </nav>
+      </header>
+    </div>
+
     <main>
       <section>
-        <article>
-          <h1>Heading 1</h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
-            corrupti voluptatem, cumque ullam iusto cum! Assumenda nihil ad
-            maiores alias labore deserunt, saepe illum inventore sint. Qui et
-            tempora dolores!
-          </p>
-        </article>
-        <article>
-          <h2>Heading 2</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
-            corrupti voluptatem, cumque ullam iusto cum! Assumenda nihil ad
-            maiores alias labore deserunt, saepe illum inventore sint. Qui et
-            tempora dolores!
-          </p>
-        </article>
-        <article>
-          <h2>Heading 3</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
-            corrupti voluptatem, cumque ullam iusto cum! Assumenda nihil ad
-            maiores alias labore deserunt, saepe illum inventore sint. Qui et
-            tempora dolores!
-          </p>
-        </article>
-        <article>
-          <h2>Heading 4</h2>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita
-            corrupti voluptatem, cumque ullam iusto cum! Assumenda nihil ad
-            maiores alias labore deserunt, saepe illum inventore sint. Qui et
-            tempora dolores!
-          </p>
-        </article>
+
+        <div class="wrapper">
+          <article>
+            <h1>Heading 1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui et tempora dolores!</p>
+          </article>
+        </div>
+
+        <div class="wrapper">
+          <article>
+            <h2>Heading 2</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
+          </article>
+        </div>
+
+        <div class="wrapper">
+          <article>
+            <h2>Heading 3</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
+          </article>
+        </div>
+
+        <div class="wrapper">
+          <article>
+            <h2>Heading 4</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
+          </article>
+        </div>
+
       </section>
     </main>
+
     <footer>
-      <div id="image">
+
+      <div class="orange-bg">
         <img src="assets/Asset 2@3x.png" alt="Company logo" />
       </div>
-      <div id="copyright">
+
+      <div class="orange-bg">
         <p>&#169; Mangata Gallo 2025</p>
       </div>
+
     </footer>
+
   </body>
 </html>
