--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 
   <body>
 
-    <div class="wrapper">
+    <!-- <div class="wrapper"> -->
       <header>
         <img src="/assets/Asset 1@3x.png" alt="Company logo" />
+      </header>
 
         <nav class="primary-navigation" aria-label="Primary Navigation">
           <ul>
@@ -23,52 +24,55 @@
             <li><a href="about.html">About</a></li>
           </ul>
         </nav>
-      </header>
-    </div>
+    <!-- </div> -->
 
     <main>
       <section>
 
-        <div class="wrapper">
-          <article>
-            <h1>Heading 1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui et tempora dolores!</p>
-          </article>
-        </div>
+        <!-- <div class="wrapper"> -->
 
-        <div class="wrapper">
+            <!-- <div class="h1"> -->
+            <article>
+              <h1>Heading 1</h1>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui et tempora dolores!</p>
+            </article>
+          <!-- </div> -->
+
+        <!-- </div> -->
+
+        <!-- <div class="wrapper"> -->
           <article>
             <h2>Heading 2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
           </article>
-        </div>
+        <!-- </div> -->
 
-        <div class="wrapper">
+        <!-- <div class="wrapper"> -->
           <article>
             <h2>Heading 3</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
           </article>
-        </div>
+        <!-- </div> -->
 
-        <div class="wrapper">
+        <!-- <div class="wrapper"> -->
           <article>
             <h2>Heading 4</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
           </article>
-        </div>
+        <!-- </div> -->
 
       </section>
     </main>
 
     <footer>
 
-      <div class="orange-bg">
+      <!-- <div class="orange-bg"> -->
         <img src="assets/Asset 2@3x.png" alt="Company logo" />
-      </div>
+      <!-- </div> -->
 
-      <div class="orange-bg">
+      <!-- <div class="orange-bg"> -->
         <p>&#169; Mangata Gallo 2025</p>
-      </div>
+      <!-- </div> -->
 
     </footer>
 
