--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 
     <footer>
 
-      <!-- <div class="orange-bg"> -->
+      <div class="orange-bg">
         <img src="assets/Asset 2@3x.png" alt="Company logo" />
-      <!-- </div> -->
+      </div>
 
-      <!-- <div class="orange-bg"> -->
+      <div class="orange-bg">
         <p>&#169; Mangata Gallo 2025</p>
-      <!-- </div> -->
+      </div>
 
     </footer>
 
