--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 
   <body>
 
-    <!-- <div class="wrapper"> -->
       <header>
         <img src="/assets/Asset 1@3x.png" alt="Company logo" />
       </header>
@@ -24,53 +23,40 @@
             <li><a href="about.html">About</a></li>
           </ul>
         </nav>
-    <!-- </div> -->
 
     <main>
       <section>
 
-        <!-- <div class="wrapper"> -->
-
-            <!-- <div class="h1"> -->
             <article>
-              <h1>Heading 1</h1>
+              <h1>Buy 1 Get 1 FREE</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui et tempora dolores!</p>
             </article>
-          <!-- </div> -->
 
-        <!-- </div> -->
-
-        <!-- <div class="wrapper"> -->
           <article>
-            <h2>Heading 2</h2>
+            <h2>Section 1</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
           </article>
-        <!-- </div> -->
 
-        <!-- <div class="wrapper"> -->
           <article>
-            <h2>Heading 3</h2>
+            <h2>Section 2</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
           </article>
-        <!-- </div> -->
 
-        <!-- <div class="wrapper"> -->
           <article>
-            <h2>Heading 4</h2>
+            <h2>Section 3</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
           </article>
-        <!-- </div> -->
 
       </section>
     </main>
 
     <footer>
 
-      <div class="orange-bg">
+      <div class="foot">
         <img src="assets/Asset 2@3x.png" alt="Company logo" />
       </div>
 
-      <div class="orange-bg">
+      <div class="foot">
         <p>&#169; Mangata Gallo 2025</p>
       </div>
 
