--- a/about.html
+++ b/about.html
@@ -6,19 +6,27 @@
     <title>About Us</title>
     <meta name="description" content="Luxury Jewlery" />
     <meta name="author" content="Mangata and Gallo" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
+
   <body>
-    <header>
-      <!-- <img src="/assets/Asset 1@3x.png" alt="Company logo" /> -->
-    </header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="products.html">Products</a></li>
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="about.html">About</a></li>
-      </ul>
-    </nav>
+
+      <header>
+        <img src="/assets/Asset 1@3x.png" alt="Company logo" />
+      </header>
+
+        <nav class="primary-navigation" aria-label="Primary Navigation">
+          <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
   </body>
+  <section>
+
+    <article>
+      <h1>About Us</h1>
+    </article>
 </html>
