--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
-            <li><a href="contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
 
@@ -28,23 +28,31 @@
       <section>
 
             <article>
-              <h1>Buy 1 Get 1 FREE</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui et tempora dolores!</p>
+              <div class="promo">
+                <a href="products.html"><h1>Buy 1 Get 1 FREE</h1></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui et tempora dolores!</p>
+              </div>
             </article>
 
           <article>
-            <h2>Section 1</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
+            <div class="watches">
+              <h2>Watches</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
+            </div>
           </article>
 
           <article>
-            <h2>Section 2</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
+            <div class="necklaces">
+              <h2>Necklaces</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
+            </div>
           </article>
 
           <article>
-            <h2>Section 3</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
+            <div class="bracelets">
+              <h2>Bracelets</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expeditacorrupti voluptatem, cumque ullam iusto cum! Assumenda nihil admaiores alias labore deserunt, saepe illum inventore sint. Qui ettempora dolores!</p>
+            </div>
           </article>
 
       </section>
