--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
   <body>
 
       <header>
-        <img src="/assets/Asset 1@3x.png" alt="Company logo" />
+        <img src="./assets/Asset 1@3x.png" alt="Company logo" />
       </header>
 
         <nav class="primary-navigation" aria-label="Primary Navigation">
